--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fea7cc57c88>"
+       "<folium.map.Marker at 0x7fe339176940>"
       ]
      },
      "execution_count": 10,
